# tcob_games

./: .clangd  .gitignore  CMakeLists.txt
BrickOut/: B2DebugDraw.cpp  B2DebugDraw.hpp  BrickOut.hpp  CMakeLists.txt  Field.cpp  Field.hpp  GameObject.cpp  GameObject.hpp  MainMenu.cpp  MainMenu.hpp  StartScene.cpp  StartScene.hpp  main.cpp
CurwenManor/: CMakeLists.txt  Common.hpp  GameCanvas.cpp  GameCanvas.hpp  Player.cpp  Player.hpp  Tiles.cpp  Tiles.hpp  basic.html  main.cpp
CurwenManor/assets/: GameAssets.cpp  GameAssets.hpp  res_cutscenes.hpp  res_font.hpp  res_images.hpp  res_json.hpp
CurwenManor/assets/gfx/: cutscenes.aseprite  objects.aseprite  player.aseprite  tiles.aseprite  title.aseprite
CurwenManor/levels/: BaseLevel.cpp  BaseLevel.hpp  Level1.cpp  Level1.hpp  LevelX.cpp  LevelX.hpp
CurwenManor/scenes/: BaseScene.cpp  BaseScene.hpp  CutScene.cpp  CutScene.hpp  GameScene.cpp  GameScene.hpp  StartScene.cpp  StartScene.hpp
Dice/: CMakeLists.txt  Common.hpp  Die.cpp  Die.hpp  Engine.cpp  Engine.hpp  EngineHelper.cpp  EngineHelper.hpp  Field.cpp  Field.hpp  Fonts.hpp  Game.cpp  Game.hpp  Hand.cpp  Hand.hpp  Painter.cpp  Painter.hpp  Slot.cpp  Slot.hpp  Socket.cpp  Socket.hpp  Sprite.cpp  Sprite.hpp  SpriteManager.cpp  SpriteManager.hpp  StartScene.cpp  StartScene.hpp  TexProxy.cpp  TexProxy.hpp  UI.cpp  UI.hpp  main.cpp  todo.txt
Dice/assets/: dice.gpl  dmd-font.aseprite  dmd-font3x5.aseprite  dmd-font4x4.aseprite  dmd-font4x5.aseprite  dmd-font4x6.aseprite  dmd-font5x4.aseprite  dmd-font5x5.aseprite  dmd-font5x7.aseprite  dmd-font6x8.aseprite  dmd-font8x8.aseprite  dmd-palette.gpl  export_font.lua  export_indices.lua  export_indices_rle.lua  import_indices.lua
Dice/assets/empty_game/: game.ini  game.lua  gfx.lua  sfx.lua
Dice/assets/zip/: dice.assets.ini  dice.ini
Dice/games/: Field.cpp  Field.hpp  Games.hpp  api_doc.lua
Dice/games/DefconOne/: do.game.ini  do.game.lua  do.gfx.lua
Dice/games/DefconSix/: dc.game.lua  dc.gfx.lua  dc.sfx.lua  dc_game.ini  dc_game.lua  dc_gfx.lua  dc_sfx.lua
Dice/games/Pipstop/: ps_events.lua  ps_game.ini  ps_game.lua  ps_gfx.lua  ps_sfx.lua
Dice/games/SpaceRocks/: game.ini  game.lua  gfx.lua  sfx.lua  sr.game.ini  sr.game.lua  sr.gfx.lua  sr.sfx.lua  sr_game.ini  sr_game.lua  sr_gfx.lua  sr_sfx.lua
Dice/objects/: Die.cpp  Die.hpp  Slot.cpp  Slot.hpp
FallingPixels/: CMakeLists.txt  Common.hpp  Element.cpp  Element.hpp  ElementSystem.cpp  ElementSystem.hpp  FallingPixels.cpp  FallingPixels.hpp  Trim.hpp  UI.cpp  UI.hpp  elements.lua  main.cpp
Mines/: CMakeLists.txt  Field.cpp  Field.hpp  MainMenu.cpp  MainMenu.hpp  StartScene.cpp  StartScene.hpp  main.cpp
Plinth/: .gitignore  CMakeLists.txt  Cache.cpp  Cache.hpp  Common.hpp  Level.cpp  Level.hpp  MapGenerator.cpp  MapGenerator.hpp  MapRenderer.cpp  MapRenderer.hpp  Player.cpp  Player.hpp  Plinth.cpp  Plinth.hpp  Raycaster.cpp  Raycaster.hpp  Raycaster.inl  TextureCache.cpp  TextureCache.hpp  Textures.hpp  Walls.cpp  Walls.hpp  main.cpp
Rogue/: CMakeLists.txt  Common.cpp  Common.hpp  Layout.cpp  Layout.hpp  Level.cpp  Level.hpp  MainMenu.cpp  MainMenu.hpp  MasterControl.cpp  MasterControl.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  StartScene.cpp  StartScene.hpp  main.cpp
Rogue/actors/: Actor.cpp  Actor.hpp  Monster.hpp  Player.cpp  Player.hpp  Profile.hpp
Rogue/dungeon/: Dungeon.cpp  Dungeon.hpp  Layout.cpp  Layout.hpp  Object.cpp  Object.hpp  Tile.cpp  Tile.hpp
Rogue/level/: Layout.cpp  Level.cpp  Level.hpp  Tile.cpp  Tile.hpp
Rogue/monsters/: Monster.hpp  Player.cpp  Player.hpp
Rogue/objects/: InvItem.hpp  Object.cpp  Object.hpp
Rogue/ui/: MainMenu.cpp  MainMenu.hpp  Renderer.cpp  Renderer.hpp
STC/: CMakeLists.txt  Common.hpp  Mission.cpp  Mission.hpp  Object.cpp  Object.hpp  STC.cpp  STC.hpp  Spacecraft.cpp  Spacecraft.hpp  Station.cpp  Station.hpp  _test.hpp  main.cpp
Snake/: CMakeLists.txt  Field.cpp  Field.hpp  FieldItems.cpp  FieldItems.hpp  MainMenu.cpp  MainMenu.hpp  Snake.hpp  StartScene.cpp  StartScene.hpp  main.cpp
Solitaire/: CMakeLists.txt  CardTable.cpp  CardTable.hpp  Cardset.cpp  Cardset.hpp  Common.hpp  Field.cpp  Field.hpp  LuaAPI.md  README.md  StartScene.cpp  StartScene.hpp  main.cpp  theme.ini
Solitaire/games/: Cards.cpp  Cards.hpp  Games.cpp  Games.hpp  Games.inl  Piles.cpp  Piles.hpp  Rules.cpp  Rules.hpp
Solitaire/games/lua/: bakersdozen.game.lua  bakersdozen.games.lua  beleagueredcastle.game.lua  beleagueredcastle.games.lua  canfield.game.lua  canfield.games.lua  fan.game.lua  fan.games.lua  fortythieves.game.lua  fortythieves.games.lua  freecell.game.lua  freecell.games.lua  games.bakersdozen.lua  games.beleagueredcastle.lua  games.canfield.lua  games.fan.lua  games.fortythieves.lua  games.freecell.lua  games.golf.lua  games.gypsy.lua  games.klondike.lua  games.montana.lua  games.raglan.lua  games.spider.lua  (+16 more)
Solitaire/ui/: UI.cpp  UI.hpp  UIHelper.cpp  UIHelper.hpp
Solitide/: CMakeLists.txt  Canvases.cpp  Canvases.hpp  CardRenderer.cpp  CardRenderer.hpp  CardSet.cpp  CardSet.hpp  CardTable.cpp  CardTable.hpp  Cards.cpp  Cards.hpp  Cardset.cpp  Cardset.hpp  Common.hpp  Database.cpp  Database.hpp  LuaAPI.md  MainScene.cpp  MainScene.hpp  Piles.cpp  Piles.hpp  README.md  ScriptAPI.md  ScriptHost.cpp  ScriptHost.hpp  Sources.hpp  StartScene.cpp  StartScene.hpp  Translator.cpp  Translator.hpp  main.cpp  rules.json  styles.json  theme.ini  themes.json
Solitide/doc/: Notes.md  ScriptAPI.md  Todo.md
Solitide/games/: Cards.cpp  Cards.hpp  GameInfo.cpp  GameInfo.hpp  Games.cpp  Games.hpp  Games.inl  Piles.cpp  Piles.hpp
Solitide/gfx/: Canvases.cpp  Canvases.hpp  CardRenderer.cpp  CardRenderer.hpp  CardSet.cpp  CardSet.hpp  CardTable.cpp  CardTable.hpp
Solitide/ui/: Sources.hpp  Styles.cpp  Styles.hpp  Themes.cpp  Themes.hpp  Translator.cpp  Translator.hpp  UI.cpp  UI.hpp  UIHelper.cpp  UIHelper.hpp
Solitide/wizard/: Wizard.cpp  Wizard.hpp  WizardScene.cpp  WizardScene.hpp
Template/: CMakeLists.txt  Field.cpp  Field.hpp  MainMenu.cpp  MainMenu.hpp  StartScene.cpp  StartScene.hpp  main.cpp
(+138 files in other folders)
